--- a/conf/app.conf
+++ b/conf/app.conf
@@ -10,3 +10,12 @@ EnableDocs = true
 EnableAdmin = true
 AdminAddr = "localhost"
 AdminPort = 8088
+
+ResultBasePath = "/Users/wx/gopath/src/github.com/xuzixx/md_cs/result"
+
+[smp]
+URLConfTmp = 
+URLImgTmp = 
+HeaderReferTmp = 
+HeaderOrigin = 
+ReChapter = 
